<resources>
    <string name="app_name">Weather</string>
    <string name="title_today">Today</string>
    <string name="title_week">Week</string>
    <string name="title_map">Map</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="location_permission_denied">location permission denied</string>
    <string name="permission_required_toast">location permission is required</string>
    <string name="permission_rationale_location">for correct operation, the application needs permission to determine the location</string>
    <string name="error_network">no network</string>
    <string name="error_data">data missing</string>
    <string name="location_services_disabled">Location services disabled</string>
    <string name="enable_location_message">Please enable location services and GPS in order to
        use this feature</string>
    <string name="search">Search</string>
    <string name="max_temp">Maximal temperature</string>
    <string name="min_temp">Minimal temperature</string>
    <string name="default_text">-</string>
    <string name="sunrise_sunset">Sunrise/sunset</string>
    <string name="win_speed">Win speed</string>
    <string name="humidity">Humidity</string>
    <string name="km_h">km/h</string>
    <string name="u00b0c">°C</string>
    <string name="presure">Presure</string>
    <string name="hpa">hPa</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>