<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.example.weather.presentation.ui.today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_week"
        android:name="com.example.weather.presentation.ui.week.WeekFragment"
        android:label="@string/title_week"
        tools:layout="@layout/fragment_week" >
        <action
            android:id="@+id/action_navigation_week_to_navigation_today"
            app:destination="@id/navigation_today" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.weather.presentation.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_today"
            app:destination="@id/navigation_today" />
    </fragment>
</navigation>